--- a/packages/theme-chalk/src/mixins/mixins.scss
+++ b/packages/theme-chalk/src/mixins/mixins.scss
@@ -1,8 +1,7 @@
 @import "../common/var.scss";
 
 // .z-button{}
-
-@mixin p($block) {
+@mixin b($block) {
   $B: $namespace + "-" + $block;
   .#{$B} {
     @content;
@@ -31,4 +30,10 @@
       @content;
     }
   }
+}
+
+@mixin button-variant($color, $background-color, $border-color) {
+  color: $color;
+  background-color: $background-color;
+  border-color: $border-color;
 }
