--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -25,14 +25,14 @@
   content: "\e612";
 }
 
-@keyframes rotating {
-  0% {
-    transform: rotateZ(0deg);
+@keyframes rotate {
+  from {
+    opacity: 0;
   }
-  100% {
-    transform: rotateZ(360deg);
+  to {
+    opacity: 1;
   }
 }
 .#{$namespace}-icon-loading {
-  animation: rotating 1.5s linear infinite;
+  animation: rotate 1.5s linear infinite;
 }
