--- a/packages/theme-chalk/src/icon.scss
+++ b/packages/theme-chalk/src/icon.scss
@@ -21,8 +21,11 @@
   content: "\e661";
 }
 
-.p-icon-guanbi1:before {
-  content: "\e612";
+.p-icon-arrow-left:before {
+  content: "\e661";
+}
+.p-icon-arrow-right:before {
+  content: "\e661";
 }
 
 @keyframes rotate {
