--- a/packages/theme-chalk/src/mixins/mixins.scss
+++ b/packages/theme-chalk/src/mixins/mixins.scss
@@ -37,3 +37,17 @@
   background-color: $background-color;
   border-color: $border-color;
 }
+
+/* Break-points
+ -------------------------- */
+@mixin res($key, $map: $--breakpoints) {
+  // 循环断点Map，如果存在则返回  (判断 map 是否有对应的 key，存在返回 true，否则返回 false。)
+  @if map-has-key($map, $key) {
+    // inspect 返回一个字符串的表示形式
+    @media only screen and #{inspect(map-get($map, $key))} {
+      @content;
+    }
+  } @else {
+    @warn "Undefeined points: `#{$map}`";
+  }
+}
