--- a/packages/theme-chalk/src/row.scss
+++ b/packages/theme-chalk/src/row.scss
@@ -5,4 +5,16 @@
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
+  @include when(justify-end) {
+    justify-content: flex-end;
+  }
+  @include when(justify-center) {
+    justify-content: center;
+  }
+  @include when(justify-space-around) {
+    justify-content: space-around;
+  }
+  @include when(justify-space-between) {
+    justify-content: space-between;
+  }
 }
