--- a/packages/theme-chalk/src/col.scss
+++ b/packages/theme-chalk/src/col.scss
@@ -1,6 +1,11 @@
 @import "./common/var.scss";
 @import "./mixins/mixins.scss";
 
+[class*="#{$namespace}-col-"] {
+  float: left;
+  box-sizing: border-box;
+}
+
 .#{$namespace}-col-span-0 {
   display: none;
 }
@@ -8,25 +13,24 @@
 //生成24种写法
 @include b(col) {
   box-sizing: border-box;
-  @for $i from 0 through 24 {
-    &.#{$namespace}-col-span-#{$i} {
-      max-width: calc(1 / 24 * $i * 100) * 1%;
-      flex: calc(1 / 24 * $i * 100) * 1%;
-    }
-    &.#{$namespace}-col-offset-#{$i} {
-      margin-left: calc(1 / 24 * $i * 100) * 1%;
-    }
+}
+@for $i from 0 through 24 {
+  .#{$namespace}-col-span-#{$i} {
+    width: calc(1 / 24 * $i * 100) * 1%;
+    // flex: calc(1 / 24 * $i * 100) * 1%;
+  }
+  .#{$namespace}-col-offset-#{$i} {
+    margin-left: calc(1 / 24 * $i * 100) * 1%;
   }
 }
-
 @include res(xs) {
   .#{$namespace}-col-xs-0 {
     display: none;
   }
   @for $i from 0 through 24 {
     .#{$namespace}-col-xs-#{$i} {
-      max-width: calc(1 / 24 * $i * 100) * 1%;
-      flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
+      width: calc(1 / 24 * $i * 100) * 1%;
+      // flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
     }
     .#{$namespace}-col-xs-offset-#{$i} {
       margin-left: calc(1 / 24 * $i * 100) * 1%;
@@ -34,13 +38,13 @@
   }
 }
 @include res(sm) {
-  .#{$namespace}-col-xs-0 {
+  .#{$namespace}-col-sm-0 {
     display: none;
   }
   @for $i from 0 through 24 {
     .#{$namespace}-col-sm-#{$i} {
-      max-width: calc(1 / 24 * $i * 100) * 1%;
-      flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
+      width: calc(1 / 24 * $i * 100) * 1%;
+      // flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
     }
     .#{$namespace}-col-sm-offset-#{$i} {
       margin-left: calc(1 / 24 * $i * 100) * 1%;
@@ -48,13 +52,13 @@
   }
 }
 @include res(md) {
-  .#{$namespace}-col-xs-0 {
+  .#{$namespace}-col-md-0 {
     display: none;
   }
   @for $i from 0 through 24 {
     .#{$namespace}-col-md-#{$i} {
-      max-width: calc(1 / 24 * $i * 100) * 1%;
-      flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
+      width: calc(1 / 24 * $i * 100) * 1%;
+      // flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
     }
 
     .#{$namespace}-col-md-offset-#{$i} {
@@ -64,13 +68,13 @@
 }
 
 @include res(lg) {
-  .#{$namespace}-col-xs-0 {
+  .#{$namespace}-col-lg-0 {
     display: none;
   }
   @for $i from 0 through 24 {
     .#{$namespace}-col-lg-#{$i} {
-      max-width: calc(1 / 24 * $i * 100) * 1%;
-      flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
+      width: calc(1 / 24 * $i * 100) * 1%;
+      // flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
     }
     .#{$namespace}-col-lg-offset-#{$i} {
       margin-left: calc(1 / 24 * $i * 100) * 1%;
@@ -78,12 +82,12 @@
   }
 }
 @include res(xl) {
-  .#{$namespace}-col-xs-0 {
+  .#{$namespace}-col-xl-0 {
     display: none;
   }
   @for $i from 0 through 24 {
     .#{$namespace}-col-xl-#{$i} {
-      max-width: calc(1 / 24 * $i * 100) * 1%;
+      width: calc(1 / 24 * $i * 100) * 1%;
       flex: 0 0 calc(1 / 24 * $i * 100) * 1%;
     }
     .#{$namespace}-col-xl-offset-#{$i} {
