--- a/packages/theme-chalk/src/row.scss
+++ b/packages/theme-chalk/src/row.scss
@@ -1,20 +1,27 @@
 @import "./common/var.scss";
 @import "./mixins/mixins.scss";
-
+@import "./mixins/utils.scss";
 @include b(row) {
   box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  @include when(justify-end) {
-    justify-content: flex-end;
-  }
-  @include when(justify-center) {
-    justify-content: center;
-  }
-  @include when(justify-space-around) {
-    justify-content: space-around;
-  }
-  @include when(justify-space-between) {
-    justify-content: space-between;
+  position: relative;
+  @include utils-clearfix;
+  @include m(flex) {
+    display: flex;
+    &:before,
+    &:after {
+      display: none;
+    }
+    @include when(justify-end) {
+      justify-content: flex-end;
+    }
+    @include when(justify-center) {
+      justify-content: center;
+    }
+    @include when(justify-space-around) {
+      justify-content: space-around;
+    }
+    @include when(justify-space-between) {
+      justify-content: space-between;
+    }
   }
 }
