--- a/packages/theme-chalk/src/transfer.scss
+++ b/packages/theme-chalk/src/transfer.scss
@@ -14,6 +14,13 @@
     // box-sizing: border-box;
     // position: relative;
   }
+  @include e(header){
+    
+  }
+  @include e(body) {
+    height: 200px;
+    overflow-y: auto;
+  }
   @include e(buttons) {
     display: inline-block;
   }
