--- a/packages/theme-chalk/src/common/var.scss
+++ b/packages/theme-chalk/src/common/var.scss
@@ -12,6 +12,9 @@ $--border-width-base: 1px !default;
 $--border-style-base: solid !default;
 $--border-color-lighter: #ebeef5 !default;
 
+$--color-text-placeholder: #c0c4cc !default;
+$--color-text-secondary: #909399 !default;
+
 /* Break-point
 --------------------------*/
 $--sm: 768px !default;
@@ -43,21 +46,39 @@ $--breakpoints-spec: (
   "sm-and-up": (
     min-width: $--sm,
   ),
-  "sm-only": "(min-width: #{$--sm}) and (max-width: #{$--md - 1})",
+  "sm-only": (
+    min-width: #{$--sm},
+  )
+  and
+  (
+    max-width: #{$--md - 1},
+  ),
   "sm-and-down": (
     max-width: $--md - 1,
   ),
   "md-and-up": (
     min-width: $--md,
   ),
-  "md-only": "(min-width: #{$--md}) and (max-width: #{$--lg - 1})",
+  "md-only": (
+    min-width: #{$--md},
+  )
+  and
+  (
+    max-width: #{$--lg - 1},
+  ),
   "md-and-down": (
     max-width: $--lg - 1,
   ),
   "lg-and-up": (
     min-width: $--lg,
   ),
-  "lg-only": "(min-width: #{$--lg}) and (max-width: #{$--xl - 1})",
+  "lg-only": (
+    min-width: #{$--lg},
+  )
+  and
+  (
+    max-width: #{$--xl - 1},
+  ),
   "lg-and-down": (
     max-width: $--xl - 1,
   ),
